init overall introduction

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -21,7 +21,17 @@
 
 \section{Introduction}
 
-Overall introduction, place hold.
+In the intricate field of data analysis, the study of ordinal data, which consists of categories with an inherent order but undefined spacing, presents unique challenges and opportunities. This paper delves into the complexities of clustering and predicting ordinal data, a prevalent type of data in fields ranging from social sciences to healthcare. Ordinal data distinguishes itself from nominal and continuous data types by necessitating specialized analytical methods that acknowledge its structured ordering without presuming equal intervals between its categories.
+
+The initial part of our investigation defines ordinal data and underscores its distinctive features. This foundation supports a subsequent discussion on suitable clustering and prediction methodologies, with a focus on model-based clustering as a sophisticated approach tailored to the ordinal nature of the data. This contrasts with the limitations inherent in distance-based methods when applied to ordinal data. Additionally, the paper reviews specific statistical models developed for ordinal data analysis, such as the Proportional Odds model and the Ordered Stereotype Regression Model, highlighting their effectiveness in extracting meaningful insights.
+
+Reflecting on the historical development of ordinal data analysis, the paper traces its evolution from early methodologies to recent innovations that have broadened its applicability and improved its precision. This historical context sets the stage for future research directions, emphasizing the potential for integrating machine learning with conventional statistical methods to refine the predictive performance of ordinal data models.
+
+The author's endeavor to investigate the extension of these methodologies to the predictive clustering of new data. 
+This exploration aims to bridge traditional statistical analysis with cutting-edge machine learning techniques, enhancing the ability to accurately predict cluster membership for incoming data points. 
+Such advancements are crucial for applying ordinal data models in dynamic environments where predictive accuracy is paramount.
+
+In summary, this paper offers a comprehensive examination of methodologies for clustering and predicting ordinal data, enriched by a forward-looking investigation into their extension for predictive clustering of new data. This inquiry is intended as a resource for both researchers and practitioners, providing insights necessary for navigating the complexities of ordinal data and leveraging its full potential in analytical endeavors.
 
 \subsection*{Ordinal Data}
 
