--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -111,38 +111,35 @@ The Proportional Odds model is another approach which defined for an ordinal res
 Given a set of predictor variables represented by the vector $X$, the model expresses the cumulative log odds of $Y$ being less than or equal to a category $j$ as follows:
 
 \[
-\log\left(\frac{P(Y_j \leq j | \mathbf{X})}{P(Y_j > j | \mathbf{X})}\right) = \theta_j - \boldsymbol{\beta}^T\mathbf{X}
+\log\left(\frac{P(Y \leq j | X = x)}{P(Y > j | X = x)}\right) = \theta_j - \beta^T x
 \]
 
 where:
 \begin{itemize}
-    \item $P(Y_j \leq j | \mathbf{X})$ is the cumulative probability of $Y$ being in category $j$ or any category below $j$, given the predictors $X$.
+    \item $P(Y \leq j | X = x)$ is the cumulative probability of $Y$ being in category $j$ or any category below $j$, given the predictors $x$.
     \item $\theta_j$ is the intercept term for category $j$, which allows the log odds to vary across categories.
-    \item $\mathbf{X}\boldsymbol{\beta}$ represents the linear predictor, with $\mathbf{X}$ being the matrix of predictor variables and $\boldsymbol{\beta}$ the vector of coefficients corresponding to these variables.
-    \item The model assumes that the effect of the predictors on the log odds of being in a lower versus a higher category is proportional across all categories, which is encapsulated in the term $\boldsymbol{\beta}^T\mathbf{X}$.
+    \item $\beta^T x$ represents the linear predictor, with $X$ being the matrix of predictor variables and $\beta$ the vector of coefficients corresponding to these variables.
+    \item The model assumes that the effect of the predictors on the log odds of being in a lower versus a higher category is proportional across all categories, which is encapsulated in the term $\beta^T x$.
 \end{itemize}
 
-The Proportional Odds assumption implies that the vector of coefficients $\boldsymbol{\beta}$ is the same across all category thresholds. (~\cite{mccullagh1980regression})
+The Proportional Odds assumption implies that the vector of coefficients $\beta$ is the same across all category thresholds. (~\cite{mccullagh1980regression})
 
 \subsection{Ordered Stereotype Regression Model}
 
 The Ordered Stereotype Regression Model is a statistical approach designed to analyze ordinal dependent variables, where the outcomes are categories with a natural order but not a quantifiable difference between them.
 
-Given an ordinal response variable $Y$ with categories ($j=1, 2, \ldots, J$), $i$ is number of observation, and a vector of independent variables $X$, the probability of $Y$ falling into the $j$th category, given $X = x$, is denoted as $P(Y_i = j | X = x)$.
+Given an ordinal response variable $Y$ with categories ($j=1, 2, \ldots, J$), and a vector of independent variables $X$, the probability of $Y$ falling into the $j$th category, given $X = x$, is denoted as $P(Y = j | X = x)$.
 
 
 The logit for category $j$ is then:
 \[
-\log\left(\frac{P(Y_i = j | X = x)}{1 - P(Y_i = 1 | X = x)}\right) = \theta_j + \beta^T x
+\log\left(\frac{P(Y = j | X = x)}{1 - P(Y = 1 | X = x)}\right) = \theta_j + \phi_j \beta^T x
 \]
 where $\theta_j$ is the intercept for category $j$, and $\beta$ is a vector of coefficients for $X$.
-
-The Stereotype Model modifies the standard approach by positing:
-\[
-\beta_j = \gamma_j \beta
-\]
-for each category $j$ (except a reference category), where $\beta_j$ is the coefficient vector associated with category $j$, $\gamma_j$ is a scalar, 
-and $\beta$ is a common vector of coefficients. This allows the effects to vary across categories but constrains them to follow a scaled version of a common pattern. (~\cite{anderson1984regression})
+And come with hypothesis
+$1 = \phi_1 \geq \phi_2 \geq \ldots \geq \phi_k = 0.$
+Stereotype model is unconstrained, $\phi$ add restricts to make it works for ordinal data.
+This allows the effects to vary across categories but constrains them to follow a scaled version of a common pattern. (~\cite{anderson1984regression})
 
 
 \subsection{Finite Mixture modeling}
