--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -163,3 +163,11 @@ URL = {https://doi.org/10.1214/09-SS053}
   pages={1--22},
   year={1977}
 }
+
+@misc{PSCWA2016,
+  author = {{Public Sector Commission of Western Australia}},
+  title = {Public Sector Commission WA Employee Perception Survey 2016},
+  year = {2016},
+  url = {https://data.gov.au/data/dataset/public-sector-commission-wa-employee-perception-survey-2016},
+  note = {Accessed: 2024-03-18}
+}
