--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -237,7 +237,7 @@ For each row in $\tilde{Y}$ the probability of each cluster can be calcuated fol
 
 \subsection{Datasets}
 
-
+The Public Sector Commission WA Employee Perception Survey 2016(~\cite{PSCWA2016}), conducted by the Public Sector Commission of Western Australia, aimed to capture employee perceptions on workplace factors like leadership, communication, and work/life balance. This survey helps understand the organizational culture and identify areas for improvement within the public sector. In 2016, employees from 11 public sector entities participated with a 53\% response rate, resulting in 3,883 valid responses. The dataset includes a survey instrument, individual responses, and a summary of the results, available for download under the Creative Commons Attribution 3.0 Australia license.
 
 
 \section{Conclusion and Future Directions}
