--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -21,17 +21,51 @@
 
 \section{Introduction}
 
-In the intricate field of data analysis, the study of ordinal data, which consists of categories with an inherent order but undefined spacing, presents unique challenges and opportunities. This paper delves into the complexities of clustering and predicting ordinal data, a prevalent type of data in fields ranging from social sciences to healthcare. Ordinal data distinguishes itself from nominal and continuous data types by necessitating specialized analytical methods that acknowledge its structured ordering without presuming equal intervals between its categories.
 
-The initial part of our investigation defines ordinal data and underscores its distinctive features. This foundation supports a subsequent discussion on suitable clustering and prediction methodologies, with a focus on model-based clustering as a sophisticated approach tailored to the ordinal nature of the data. This contrasts with the limitations inherent in distance-based methods when applied to ordinal data. Additionally, the paper reviews specific statistical models developed for ordinal data analysis, such as the Proportional Odds model and the Ordered Stereotype Regression Model, highlighting their effectiveness in extracting meaningful insights.
+The study of ordinal data presents unique challenges and opportunities.
+Ordinal data consists of categories with an inherent order but undefined
+spacing. This makes it distinct from nominal and continuous data,
+necessitating specialized analytical methods that acknowledge its
+structured ordering without presuming equal intervals between its
+categories.
 
-Reflecting on the historical development of ordinal data analysis, the paper traces its evolution from early methodologies to recent innovations that have broadened its applicability and improved its precision. This historical context sets the stage for future research directions, emphasizing the potential for integrating machine learning with conventional statistical methods to refine the predictive performance of ordinal data models.
+This project investigates methods for clustering and predicting cluster
+membership for ordinal data. These methods are useful because ordinal
+data is prevalent in fields ranging from social sciences to healthcare.
+We begin by defining ordinal data and describing its distinctive
+features. We then discuss existing clustering and prediction
+methodologies. We focus on model-based clustering because we have an
+existing sophisticated approach of this type, that is tailored to the
+ordinal nature of the data, whereas there are limitations inherent in
+distance-based methods when applied to ordinal data. The report
+describes specific statistical models developed for ordinal data
+analysis, such as the Proportional Odds model and the Ordered Stereotype
+Model, highlighting their effectiveness in extracting meaningful
+insights.
 
-The author's endeavor to investigate the extension of these methodologies to the predictive clustering of new data. 
-This exploration aims to bridge traditional statistical analysis with cutting-edge machine learning techniques, enhancing the ability to accurately predict cluster membership for incoming data points. 
-Such advancements are crucial for applying ordinal data models in dynamic environments where predictive accuracy is paramount.
+We then reflect on the historical development of ordinal data analysis,
+from early methodologies to recent innovations that have broadened its
+applicability and improved its precision. We also consider future
+research directions, including the potential for integrating machine
+learning with conventional statistical methods to refine the predictive
+performance of ordinal data models.
 
-In summary, this paper offers a comprehensive examination of methodologies for clustering and predicting ordinal data, enriched by a forward-looking investigation into their extension for predictive clustering of new data. This inquiry is intended as a resource for both researchers and practitioners, providing insights necessary for navigating the complexities of ordinal data and leveraging its full potential in analytical endeavors.
+Clustering methods have previously been developed for ordinal data,
+using models such as the Ordered Stereotype Model. However, these
+existing methods do not include techniques for determining the likely
+cluster membership of any new observations that were not available at
+the initial clustering stage. Therefore, this research aims to extend
+these existing methods to accurately predict cluster membership for
+incoming data points. Such advancements are crucial for applying ordinal
+data in dynamic environments where new data are produced frequently. The
+accuracy of the predictions is also important, so we will assess this to
+ensure that the methods perform sufficiently well.
+
+In summary, this paper offers an examination of methodologies for
+clustering and predicting ordinal data. This inquiry is intended as a
+resource for both researchers and practitioners, providing insights
+necessary for navigating the complexities of ordinal data and leveraging
+its full potential in analytical endeavors.
 
 \subsection*{Ordinal Data}
 
