--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -243,15 +243,8 @@ This advantage stems from two key factors: firstly, ordinal data do not presuppo
 
 \section{Cluster Prediction for Ordinal Data}
 
-This study delves into the development of a sophisticated cluster prediction framework, leveraging the capabilities of finite mixture models to address the nuanced challenge of analyzing and predicting ordinal data. At the heart of our exploration is the Ordered Stereotype Regression Model (OSRM), selected for its demonstrable efficacy in capturing the ordinal essence of data while facilitating the accurate grouping of observations into distinct clusters. This model exemplifies the practical application of our proposed method, serving as a pivotal reference point for understanding the broader implications and versatility of the approach.
-
-Beyond the confines of OSRM, our methodology exhibits a remarkable degree of flexibility, accommodating a variety of statistical models adept at handling ordinal data. The Proportional Odds Model, renowned for its robustness in ordinal regression tasks, stands as another testament to the adaptability of our approach. This versatility ensures that the proposed framework is not limited to a singular model or dataset, but rather, it can be tailored to meet the specific requirements of diverse clustering challenges.
-
-Furthermore, the scope of our method extends beyond traditional row clustering to encompass column clustering and other multifaceted clustering types. This expansive applicability underscores the potential of our approach to revolutionize the way researchers and practitioners tackle the complexities inherent in ordinal data. By enabling nuanced analysis and prediction across a broad spectrum of clustering scenarios, our framework promises to enhance the precision of data-driven insights and decision-making processes.
-
-In bridging the gap between theoretical models and practical applications, this study seeks to contribute a novel perspective to the field of data analysis. Through a meticulous examination of the Ordered Stereotype Regression Model and its integration within a comprehensive cluster prediction framework, we aim to illuminate the path forward for researchers grappling with the intricate dynamics of ordinal data. The adaptability to various models and the extension to different clustering types reflect a deliberate effort to create a universally applicable solution that can be customized to fit the unique demands of any dataset or research question.
-
-In essence, this study not only introduces a robust cluster prediction approach but also sets the stage for future explorations in the realm of ordinal data analysis. By pushing the boundaries of what is currently possible with finite mixture models, we hope to inspire ongoing innovation and the development of even more powerful tools for data analysis and interpretation.
+This project uses finite mixture models to predict cluster membership for ordinal data. We will make use of existing clustering methods to cluster ordinal data, and then we will propose a new method for predicting the membership for new observations. We use the Ordered Stereotype Model (OSM) for ordinal data, because it is parsimonious but flexible.
+Whilst we will focus in this project on this particular model and this particular type of data, the general approach we propose can be applied to other finite mixture models that are tailored to fit other data types. Our method can also be adapted to cluster the variables of the dataset instead of the observations, because we extend an existing clustering approach that can perform both of those tasks. Thus this study not only introduces a robust cluster prediction approach but also sets the stage for future explorations ordinal data analysis.
 
 \subsection{Methodological Overview}
 
